--- a/lombok.config
+++ b/lombok.config
@@ -1,7 +1,4 @@
 lombok.accessors.chain = true
-lombok.accessors.fluent = false
+lombok.accessors.fluent = true
 
-lombok.getter.noIsPrefix = true
-
-lombok.toString.doNotUseGetters = true
-
+lombok.equalsAndHashCode.flagUsage = WARNING
