105-nonnull-exception-types

--- a/lombok.config
+++ b/lombok.config
@@ -2,3 +2,6 @@ lombok.accessors.chain = true
 lombok.accessors.fluent = true
 
 lombok.equalsAndHashCode.flagUsage = WARNING
+lombok.nonNull.flagUsage = WARNING
+
+# lombok.nonNull.exceptionType = IllegalArgumentException
