106-constructors-and-configurations

--- a/lombok.config
+++ b/lombok.config
@@ -4,4 +4,8 @@ lombok.accessors.fluent = true
 lombok.equalsAndHashCode.flagUsage = WARNING
 lombok.nonNull.flagUsage = WARNING
 
+lombok.anyConstructor.addConstructorProperties = true
+
+lombok.noArgsConstructor.extraPrivate = true
+
 # lombok.nonNull.exceptionType = IllegalArgumentException
