--- a/lombok.config
+++ b/lombok.config
@@ -9,3 +9,23 @@ lombok.anyConstructor.addConstructorProperties = true
 lombok.noArgsConstructor.extraPrivate = true
 
 # lombok.nonNull.exceptionType = IllegalArgumentException
+# Customize builder class name with a star
+lombok.builder.className = Custom*Builder
+
+# Flag usage of @Builder as a warning
+lombok.builder.flagUsage = warning
+
+# Enable Guava's Immutable Builders for singular collections
+lombok.singular.useGuava = true
+
+# Automatically singularize collection field names
+lombok.singular.auto = true
+
+# Lombok @Data configurations (from previous steps)
+
+# Flag usage of @Data as a warning
+lombok.data.flagUsage = warning
+
+# Specify copyable annotations
+lombok.copyableAnnotations += javax.validation.constraints.NotNull
+lombok.copyableAnnotations += com.fasterxml.jackson.annotation.JsonProperty
