--- a/lombok.config
+++ b/lombok.config
@@ -29,3 +29,47 @@ lombok.data.flagUsage = warning
 # Specify copyable annotations
 lombok.copyableAnnotations += javax.validation.constraints.NotNull
 lombok.copyableAnnotations += com.fasterxml.jackson.annotation.JsonProperty
+
+
+# lombok.config
+
+# Lombok @Value configurations
+
+# Flag usage of @Value as a warning
+lombok.value.flagUsage = warning
+
+# Generate an extra private no-args constructor for @Value annotated classes
+lombok.noArgsConstructor.extraPrivate = true
+
+# Lombok @Builder configurations
+
+# Customize builder class name with a star
+lombok.builder.className = Custom*Builder
+
+# Flag usage of @Builder as a warning
+lombok.builder.flagUsage = warning
+
+# Enable Guava's Immutable Builders for singular collections
+lombok.singular.useGuava = true
+
+# Automatically singularize collection field names
+lombok.singular.auto = true
+
+# Lombok Logging configurations
+
+# Set the logger field name to 'logger'
+lombok.log.fieldName = logger
+
+# Set the logger field to be static
+lombok.log.fieldIsStatic = true
+
+# Flag usage of specific logging annotations
+lombok.log.slf4j.flagUsage = warning
+lombok.log.log4j2.flagUsage = warning
+lombok.log.log.flagUsage = warning
+lombok.log.commonsLog.flagUsage = warning
+lombok.log.flogger.flagUsage = warning
+
+# Specify copyable annotations
+lombok.copyableAnnotations += javax.validation.constraints.NotNull
+lombok.copyableAnnotations += com.fasterxml.jackson.annotation.JsonProperty
