--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,17 @@
       <artifactId>validation-api</artifactId>
       <version>1.0.0.GA</version>
     </dependency>
+<!--    <dependency>-->
+<!--      <groupId>ch.qos.logback</groupId>-->
+<!--      <artifactId>logback-classic</artifactId>-->
+<!--      <version>1.4.11</version>-->
+<!--    </dependency>-->
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j-impl</artifactId>
+      <version>2.20.0</version>
+    </dependency>
 
   </dependencies>
 
