--- a/lombok.config
+++ b/lombok.config
@@ -73,3 +73,11 @@ lombok.log.flogger.flagUsage = warning
 # Specify copyable annotations
 lombok.copyableAnnotations += javax.validation.constraints.NotNull
 lombok.copyableAnnotations += com.fasterxml.jackson.annotation.JsonProperty
+
+
+# Flag usage of @With as a warning
+lombok.with.flagUsage = warning
+
+# Specify copyable annotations
+lombok.copyableAnnotations += javax.validation.constraints.NotNull
+lombok.copyableAnnotations += com.fasterxml.jackson.annotation.JsonProperty
